--- a/case-isiBank/src/main/resources/application.properties
+++ b/case-isiBank/src/main/resources/application.properties
@@ -1,4 +1,1 @@
-spring.datasource.username = root
-spring.datasource.password = root
-spring.datasource.url = jdbc:mysql://localhost:3306/db_isibank
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.profiles.active = @activatedProperties@
